# cv_test

./: .gitignore  CMakeLists.txt  README.md  auto_start.sh  cvauto.service  init.sh  main.cpp  start.sh  svm_windcar-7.6.2.xml
Inc/: BufWu.h  armour.h  config.h  kalman.h  led.h  new_uart_2stm32.h  new_uart_thread_init.h  opencv_v4l2.h  serial.h
Lib/WzSerialPortPlus/: WzSerialPortPlus.cpp  WzSerialPortPlus.h
Lib/libv4l2_opencv_mat/inc/: V4l2Access.h  V4l2Capture.h  V4l2Device.h  V4l2MmapDevice.h  V4l2Output.h  V4l2ReadWriteDevice.h  logger.h
Src/: BufWu.cpp  armour.cpp  kalman.cpp  led.cpp  new_uart_thread_init.cpp  opencv_v4l2.cpp  serial.cpp
win-unix/: unistd.h
